deleted results and data output, interim commit

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ vendor/pkg/
 pyenv
 Vagrantfile
 
+# Ignore reults and data for git
+results/
+data/
+
 # Additional mac-arm generated files
 .bash_history
 .config/
